fix mobile menu; will now slide over wepage instead of behind webpage content

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 60px;
   border-bottom: 2px solid #eee;
+  position: relative;
 
   &__container {
     margin: auto;
@@ -31,6 +32,8 @@
     height: calc(100vh - 60px);
     transform: translateX(-100%);
     transition: transform 0.3s ease-out;
+    position: absolute;
+    z-index: 10;
 
     &.active {
       transform: translateX(0%);
